fix : fix sonarlint errors